[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orbit"
version = "0.1.0"
description = "Market microstructure learning engine — backtesting, pattern recognition, and ML model lifecycle"
requires-python = ">=3.11"
dependencies = [
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "pyyaml>=6.0",

    # Strategies / math
    "scipy>=1.13",
    "statsmodels>=0.14",

    # ML
    "scikit-learn>=1.4",
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "optuna>=3.6",

    # Serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",

    # Reporting
    "streamlit>=1.35",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "nbformat>=5.10",

    # Test
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
dev = ["ruff", "black", "mypy", "pre-commit"]
notebook = ["jupyterlab>=4.2", "ipykernel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
